--- a/client/src/components/ContextMenu/index.scss
+++ b/client/src/components/ContextMenu/index.scss
@@ -1,7 +1,8 @@
 .contextMenu {
     position        : fixed;
     z-index         : 10;
-    display         : none;
+    // display         : none;
+    visibility: hidden;
     border-radius   : 5px;
     // border: 1px solid;
     box-shadow      : 0 0 2px var(--second-color);
