--- a/client/src/Admin/scss/index.scss
+++ b/client/src/Admin/scss/index.scss
@@ -1,10 +1,11 @@
-.personal {
+.admin {
     height: auto;
     width: auto;
     min-width: 100%;
     min-height: 100%;
     overflow: auto;
     background-color: var(--back-color2);
+
     .body {
         // width: auto;
         position: relative;
@@ -15,13 +16,5 @@
             min-width: 200px;
             width: auto;
         }
-    }
-    
-    .out-link {
-        // color: var(--font-color);
-        color: inherit;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
     }
 }
